# Fertilisers_InFerGW4IVFHackathon_SpermMotility

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/clustering/: common.csv  predictions.csv
data/path_extraction/: ManualMotilityAnalysis.csv
data/path_extraction/old/: ManualMotilityAnalysis.csv
data/training_data/test/: sample1_vid1_sperm10_id11.npy  sample1_vid1_sperm24_id137.npy  sample1_vid1_sperm29_id261.npy  sample1_vid1_sperm3_id3.npy  sample1_vid2_sperm14_id31.npy  sample1_vid2_sperm16_id16.npy  sample1_vid2_sperm24_id68.npy  sample1_vid2_sperm26_id75.npy  sample1_vid2_sperm27_id108.npy  sample1_vid4_sperm24_id105.npy  sample1_vid8_sperm24_id131.npy  sample3_vid10_sperm16_id31.npy  sample3_vid10_sperm7_id8.npy  sample3_vid1_sperm12_id444.npy  sample3_vid1_sperm15_id409.npy  sample3_vid1_sperm7_id362.npy  sample3_vid2_sperm13_id81.npy  (+6 more)
media/animated_paths/: sample1_vid1_sperm3_id3.npy  sample1_vid5_sperm15_id70.npy  sample3_vid1_sperm15_id409.npy  sample3_vid2_sperm13_id81.npy  sample3_vid5_sperm3_id256.npy  sample3_vid7_sperm21_id345.npy  sample3_vid9_sperm16_id149.npy
pymotility/: trackingattempt.py
pymotility/learners/: expert.py  motility.py  output.txt  preprocessing.py
pymotility/motility/: __init__.py
pymotility/path_extraction/: __init__.py  extract_path.py  tracking_tool.py  tracking_tool_2.py  visualise.py
pymotility/segmentation/: __init__.py  main.py  segment.py  visualise.py
scripts/: animate_paths.py  calculate_all_paths.py  split_data.py  tracking_tool.py
tests/: test_extract_path.py  test_segmentations.py
(+407 files in other folders)
