[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymotility"
version = "0.1"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "scikit-image",
  "scikit-video",
  "scikit-learn",
  "scikit-learn-extra",
  "dtaidistance",
  "opencv-python",
  "pandas",
  "pytest",
]

[tool.nitpick]
style = [
  "github://MrP01/lint-me-now/nitpick-base-style.toml",
  "github://MrP01/lint-me-now/nitpick-python-style.toml",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint.select = ["I001"]
exclude = [".git", "**/__pycache__"]
